--- a/Serbian_Cyrillic.lng
+++ b/Serbian_Cyrillic.lng
@@ -1,7 +1,7 @@
-﻿|~LANGUAGENAME|
+|~LANGUAGENAME|
 |Српски|
 |~LANGUAGEVERSION|
-|1.10|
+|1.11|
 |~LANGUAGEAUTHOR|
 |Ozzii|
 |~LANGUAGEAUTHOREMAIL|
@@ -16,8 +16,6 @@
 |&Генериши лозинку|
 |Choose an icon.|
 |Одабери икону.|
-|&Gen|
-|&Ген|
 |General|
 |Опште|
 |Windows|
@@ -348,8 +346,6 @@
 |Датотеке Password Safe KeePass|
 |All Files|
 |Све|
-|The current file has been modified.|
-|Актуелна датотека промењена.|
 |Do you want to save the changes before closing?|
 |Сачувати промене пре затварања?|
 |KeePass - Save Before Close/Lock?|
@@ -424,8 +420,6 @@
 |CSV датотеке|
 |Text Files|
 |Текст датотеке|
-|An error occured while importing the file. File cannot be imported.|
-|Грешка при уносу датотеке. Датотека не може да се унесе.|
 |&CSV File...|
 |CSV датотека...|
 |&PwSafe v2 TXT File...|
@@ -792,8 +786,6 @@
 |Онеспособи|
 |About &Plugin...|
 |О дадатку...|
-|An error occured|
-|Грешка се појавила|
 |Error code|
 |Код грешке|
 |Unknown error|
@@ -1054,8 +1046,6 @@
 |Разлог|
 |KeePass Initialization|
 |Иницијализација KeePass-а|
-|Lock workspace when locking Windows or switching user|
-|Блокирај површину на блокирање Виндоза или промене корисника|
 |Value|
 |Вредност|
 |Select the fields KeePass should remember|
@@ -1088,8 +1078,6 @@
 |Омогући удаљена контрола (дозволи да програме комицирају са KeePass)|
 |Make sure the media that contains the key file is inserted and that KeePass has the rights to access it (check file access rights, ensure that no other application is blocking the file, ...).|
 |Проверити да медиј који садржава кључну датотеку је унешен и да KeePass има сва на њега (проверити права приступа датотеци, проверити да ни један програм не блокира датотеку, ...).|
-|URL Field Features|
-|Способности поља УРЛ|
 |There are too few characters in the character set to build up a password matching the specified rules|
 |Нема довољно кљрактера да би се креирало правило|
 |(Custom)|
@@ -1142,8 +1130,6 @@
 |Опције напредног генерисања лозинке|
 |Exclude the following characters:|
 |Избаци ове карактере:|
-|Options/rules marked with an asterisk reduce the security of generated passwords. Only enable them if you are forced to follow such rules by the website/application.|
-|Опције/правиле маркирани са звездицом смањује сигурност генерисаних лозинка. Омогућити само ако морате да пратите таквих правила за сајт/програм.|
 |No repeating characters|
 |Не поновити карактере|
 |Provider|
@@ -1160,3 +1146,83 @@
 |Испразни хисторијат тражења|
 |TANs are imported into the currently selected group|
 |TANs су увезени у актуелној одабраној групи|
+|Abort specifying a new key for the current database.|
+|Поништавање специфирања новог кључа за актуелну базу.|
+|Abort the current operation.|
+|Поништи актуелни рад.|
+|Always grant full access through remote control (not recommended)|
+|Увек дозволи пуни приступ на удаљен приступ (није препоручено)|
+|An error occurred|
+|Десила се грешка|
+|An error occurred while importing the file. File cannot be imported.|
+|Грешка при увоза датотеке. Датотека не може де се увезе.|
+|Auto-Type: Help|
+|Ауто-Унос: Помоћ|
+|Auto-Type: Select Target Window...|
+|Ауто-Унос: Одабрати циљни прозор...|
+|Cancel|
+|Поништи|
+|Copy [of an item]|
+|Копија [од елемента]|
+|Discard all changes made to the database and close the file.|
+|Одбаци све промене базе и затвори датотеку.|
+|Discard all changes made to the database and exit KeePass.|
+|Одбаци све промене базе и затвори „KeePass“.|
+|Discard all changes made to the database and lock the KeePass workspace.|
+|Одбаци све промене базе и блокирај „KeePass“.|
+|Discard changes|
+|Одбаци промене|
+|Focus entry list after a successful quick search (toolbar)|
+|Фокус у списку после успешног налажења (алатна трака)|
+|Generate a new key and overwrite the existing key file. The key currently stored in the existing key file will be lost.|
+|Генерисати нови кључ и преписати стару кључну датотеку. Актуелни кључ из кључне дљтотеке ће бити изгубљен.|
+|KeePass will not be closed.|
+|„KeePass“ неће бити затворен.|
+|Load the existing key file and use it as key for the current database. The key file will not be modified.|
+|Учитај постојећу кључну датоеку и користи је за актуелну базу. Кључна датоеке неће бити промењена.|
+|Lock workspace when locking Windows, switching user or sleeping|
+|Блокирај радну површину на блокирање „Windows“-а, промене корисника или успавања|
+|Options/rules marked with an asterisk reduce the security of generated passwords. Only enable them if you are forced to follow such rules by the website, application or password policy.|
+|Опције/правила маркирани са звездицом смањује сигурност генерисаних лозинка. Омогућити их само ако морате да пратите та правила.|
+|Overwrite existing key file?|
+|Преписати кључну датотеку?|
+|Reuse|
+|Поново користи|
+|Save|
+|Сачувај|
+|Save all changes made to the database and close the file.|
+|Сачувај све промене базе и затвори датотеку.|
+|Save all changes made to the database and exit KeePass.|
+|Сачувај све промене дазе и затвори „KeePass“.|
+|Save all changes made to the database and lock the KeePass workspace.|
+|Сачувај све промене базе и блокирај површину „KeePass“-а.|
+|Save database changes before closing the file?|
+|Сачувати промене базе пре затварања датотеке?|
+|Save database changes before exiting KeePass?|
+|Сачувати промене базе пре затварања „KeePass“-а?|
+|Save database changes before locking the workspace?|
+|Сачувати промене базе пре блокирања површине?|
+|Select the target window for the current entry.|
+|Одабрати циљни прозор за актуелни елеменат.|
+|The KeePass workspace will not be locked.|
+|Површина „KeePass“-а неће бити блокирана.|
+|The current database file has been modified|
+|Актуелна датотека ја промењена|
+|The estimated quality of the master password must be at least %u bits!|
+|Квалитет главне лозинке треба бити најмање %u бита!|
+|The file will not be closed.|
+|Датотека неће бити затворена.|
+|The master password must be at least %u characters long!|
+|Главна лозинка треба да има макар %u карактера!|
+|The selected key file already exists|
+|Одабрана кључна датотека већ постоји|
+|To specify the target window, either select an existing currently-opened window from the drop-down list, or enter the window title manually:|
+|За специфирање циљног прозора, или одабрати већ отворен прозор са списка или унети његов назив:|
+|URL Field: Help|
+|URL Поље: Помоћ|
+|URL Field: Insert Placeholder|
+|URL Поље: Унети Placeholder|
+|URL Field: Select Application...|
+|URL Поље: Одабрати програм...|
+|URL Field: Select Document...|
+|URL Поље: Одабрати докуменат...|
