--- a/Serbian_Cyrillic.lng
+++ b/Serbian_Cyrillic.lng
@@ -1,7 +1,7 @@
 ﻿|~LANGUAGENAME|
 |Српски|
 |~LANGUAGEVERSION|
-|1.09|
+|1.10|
 |~LANGUAGEAUTHOR|
 |Ozzii|
 |~LANGUAGEAUTHOREMAIL|
@@ -12,8 +12,6 @@
 |&Откажи|
 |&Close|
 |&Затвори|
-|Password Safe|
-|Сигурна лозинка|
 |&Generate Random Password|
 |&Генериши лозинку|
 |Choose an icon.|
@@ -96,8 +94,8 @@
 |Унети композитни главни кључ.|
 |(No key file selected)|
 |(Неодабрана кључна датотека)|
-|Key File:|
-|Датотека:|
+|Key File|
+|Датотека|
 |Password Generator|
 |Генератор лозинка|
 |Here you can generate a random password.|
@@ -106,8 +104,8 @@
 |Опције|
 |Current settings|
 |Актуелна подешавања|
-|Collect &entropy (recommended for strong passwords)|
-|Сакупи ентропију (препоручено за јаке лозинке)|
+|Collect additional &entropy|
+|Сакупи додатну ентропију|
 |Generated password|
 |Генерисана лозинка|
 |&Generate|
@@ -244,14 +242,6 @@
 |Избриши групу лозинка...|
 |Pr&int Group...|
 |Ш&тампај групу...|
-|Export Group To &HTML...|
-|Извоз групе у HTML...|
-|Export Group To &XML...|
-|Извоз групе у XML...|
-|Export Group To &CSV...|
-|Извоз групе у CSV...|
-|Export Group To &TXT...|
-|Извоз групе у TXT...|
 |Copy User &Name to Clipboard|
 |Копирај корисник у клипборд|
 |Copy &Password to Clipboard|
@@ -894,18 +884,26 @@
 |Сачувати базу да би се користио нов кључ.|
 |Fields to export|
 |Поља за извоз|
+|Fields to print|
+|Поља за штампање|
 |Icon|
 |Икона|
 |Group Tree|
 |Дрво група|
 |Export Options|
 |Опције извоза|
+|Print Options|
+|Опције штампања|
 |Here you can customize the exported files.|
 |Овде можете да подесите извизене датотеке.|
+|Here you can customize the printed sheet.|
+|Овде можете да подесите лист штампања.|
 |Encode/replace newline characters by '\n'|
 |Кодирај/промени карактере нове линије са '\n'|
 |Export backup entries (entries in the 'Backup' group)|
 |Извоз копираних ставка (ставке из групе 'Копија')|
+|Print backup entries (entries in the 'Backup' group)|
+|Штампај копираних ставка (из 'Копија' групе)|
 |&Get More Import Plugins...|
 |Добити још додатка за унос...|
 |Field has been pasted.|
@@ -980,8 +978,6 @@
 |Кликнути [Не] за постављање новог кљула за изнету датотеку.|
 |Reuse the current key/password?|
 |Користи актуелни кључ/лозинку?|
-|Export Group To &KeePass Database...|
-|Износ групе у KeePass базу...|
 |Show full path in the title bar (instead of file name only)|
 |Покажи цео пут и називној траци (уместо само име)|
 |Disable all auto-type features|
@@ -1134,3 +1130,33 @@
 |Неуспешно сачувавање подешавања.|
 |Arguments|
 |Аргументи|
+|&Export Group To|
+|Извоз групе у|
+|in "Minimal functionality" mode|
+|у моду „Минимална функционалност“|
+|Regular expression|
+|Регуларни израз|
+|Default user name for new entries:|
+|Стандардно име за нове ставке:|
+|Advanced Password Generator Options|
+|Опције напредног генерисања лозинке|
+|Exclude the following characters:|
+|Избаци ове карактере:|
+|Options/rules marked with an asterisk reduce the security of generated passwords. Only enable them if you are forced to follow such rules by the website/application.|
+|Опције/правиле маркирани са звездицом смањује сигурност генерисаних лозинка. Омогућити само ако морате да пратите таквих правила за сајт/програм.|
+|No repeating characters|
+|Не поновити карактере|
+|Provider|
+|Провајдер|
+|The key provider plugin did not supply a valid key|
+|Даваћ кауча није дао валидан кључ|
+|Register Ctrl-Alt-K hot key (brings the KeePass window to front)|
+|Региструј пречицу Ctrl-Alt-K (поставља напред прозор „KeePass“-а)|
+|Type to search the database|
+|Унети за налажење базе|
+|Search...|
+|Тражи...|
+|Clear Search History|
+|Испразни хисторијат тражења|
+|TANs are imported into the currently selected group|
+|TANs су увезени у актуелној одабраној групи|
